# phone

./: Android.mk  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: platformSign.jks  platformSign.keystore  rcscall.aar  rcslogin.aar
app/src/androidTest/java/com/tcl/tv5g/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: contact.json  contact1.json  contact3.json  license.sign  litepal.xml  mdm.ini  message.json  record.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: debug.h  dmsdp_business.h  dmsdp_camera_data_type.h  dmsdp_camera_handler.h  native_camera_impl.h  os.h  tos_motor.h  tos_system.h  trild.h
app/src/main/cpp/include/mme/: zmf.h  zmf_dev.h  zmf_ext.h  zmf_video.h
app/src/main/cpp/include/zos/: zos_type.h
app/src/main/java/com/example/tclphone/: AutoLogin.java  BaseActivity.java  CallService.java  MainActivity.java  MainCallDBManager.java  MyApplication.java  PersonProvider.java  RscInitHelper.java  SimService.java  WelcomeActivity.java
app/src/main/java/com/example/tclphone/db/: Contacts.java  (+11 more)
app/src/main/res/drawable/: add_female_selector.xml  add_male_selector.xml  add_phone_selector.xml  add_selector.xml  add_sim_selector.xml  column_select.xml  copy_selector.xml  divide.xml  edit_background.xml  edit_backgrounds.xml  element_background.xml  element_button_background.xml  hangup_selector.xml  ic_add_selector.xml  ic_copy_selector.xml  ic_edit_selector.xml  ic_search_seletor.xml  mute_selector.xml  num_selector_0.xml  num_selector_1.xml  num_selector_2.xml  num_selector_3.xml  num_selector_4.xml  num_selector_5.xml  num_selector_6.xml  num_selector_7.xml  num_selector_8.xml  num_selector_9.xml  num_selector_call.xml  num_selector_delete.xml  num_selector_rubbish.xml  press_background.xml  right_sign.xml  selector_contact.xml  selector_contact_item_background.xml  selector_contacts.xml  selector_message.xml  sss.xml  text_no_focus.xml  video_transfer_to_audio.xml  (+4 more)
app/src/main/res/layout/: activity_add_contact.xml  activity_add_message.xml  activity_add_message_detail.xml  activity_audio_call_ingoing.xml  activity_audio_call_outgoing.xml  activity_audio_talking.xml  activity_call_over.xml  activity_copy_contacts.xml  activity_edit_contact.xml  activity_main.xml  activity_message.xml  activity_one_call.xml  activity_tcl_call.xml  activity_video_call_ingoing.xml  activity_video_call_outgoing.xml  activity_video_talking.xml  activity_welcome.xml  chatting_item_msg_text_left.xml  chatting_item_msg_text_right.xml  contact_copy.xml  contact_datails.xml  contact_detail_layout.xml  contact_list_item_layout.xml  contact_list_item_layout_check.xml  contact_list_item_layout_message.xml  message_detail.xml  message_item_layout.xml  record_list_item_layout.xml  select_call_mode.xml  select_update_call_mode.xml  sim_copy.xml  status_bar.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/tcl/tv5g/: ExampleUnitTest.java
ci/naga_java2c/: base.conf  config.conf  config.json
gradle/wrapper/: gradle-wrapper.properties
(+110 files in other folders)
